--- a/public/index.html
+++ b/public/index.html
@@ -89,14 +89,14 @@
 
     <!-- Limpieza Automotriz (categoría 3) -->
     <div class="area-card">
-      <img src="img/limpiezaautomotriz.png" alt="Automotriz">
+      <img src="/img/limpiezaautomotriz.png" alt="Automotriz">
       <p>Automotriz</p>
       <a href="productos.html?categoria=Limpieza%20Automotriz" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Limpieza del Hogar (categoría 1) -->
     <div class="area-card">
-      <img src="img/hogar.png" alt="Hogar">
+      <img src="/img/hogar.png" alt="Hogar">
       <p>Hogar</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
