--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>INNOVA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
   <header>
-    <img src="img/logo.png" alt="innova logo">
+    <img src="/img/logo.png" alt="innova logo">
     <nav>
       <a href="index.html" class="active">Inicio</a>
 
@@ -30,7 +30,7 @@
 
   <!-- 🔹 Banner -->
   <div class="banner">
-    <img src="img/fondo.png" alt="Banner INNOVA">
+    <img src="/img/fondo.png" alt="Banner INNOVA">
     <a href="productos.html" class="btn-ver-productos">Ver Productos</a>
   </div>
 
@@ -77,7 +77,7 @@
     </div>
 
     <div class="imagen">
-      <img src="img/logo.png" alt="Innova empresa">
+      <img src="/img/logo.png" alt="Innova empresa">
     </div>
   </section>
 
@@ -103,62 +103,62 @@
 
     <!-- Hotelería (usa categoría Hogar) -->
     <div class="area-card">
-      <img src="img/hotel.png" alt="Hotelería">
+      <img src="/img/hotel.png" alt="Hotelería">
       <p>Hotelería</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Oficina (usa categoría Hogar) -->
     <div class="area-card">
-      <img src="img/oficina.png" alt="Oficina">
+      <img src="/img/oficina.png" alt="Oficina">
       <p>Oficina</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Baños (Hogar) - ejemplo llevando a página 4 -->
     <div class="area-card">
-      <img src="img/baño.png" alt="Baños">
+      <img src="/img/baño.png" alt="Baños">
       <p>Baños</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar&pagina=4" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Cocina (Hogar) -->
     <div class="area-card">
-      <img src="img/cocina.png" alt="Cocina">
+      <img src="/img/cocina.png" alt="Cocina">
       <p>Cocina</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Madera (Hogar) -->
     <div class="area-card">
-      <img src="img/madera.png" alt="Madera">
+      <img src="/img/madera.png" alt="Madera">
       <p>Madera</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Ropa (Hogar) - ejemplo llevando a página 5 -->
     <div class="area-card">
-      <img src="img/ropa.png" alt="Ropa">
+      <img src="/img/ropa.png" alt="Ropa">
       <p>Ropa</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar&pagina=5" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Higiene (categoría 2) -->
     <div class="area-card">
-      <img src="img/higienee.png" alt="Higiene">
+      <img src="/img/higienee.png" alt="Higiene">
       <p>Higiene</p>
       <a href="productos.html?categoria=Higiene" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Especializados (categoría 4) -->
     <div class="area-card">
-      <img src="img/metalica.png" alt="Piezas metálicas">
+      <img src="/img/metalica.png" alt="Piezas metálicas">
       <p>Limpieza de piezas metálicas</p>
       <a href="productos.html?categoria=Especializados&pagina=1" class="btn-area">Ver Productos</a>
     </div>
 
     <div class="area-card">
-      <img src="img/cobre.png" alt="Cobre">
+      <img src="/img/cobre.png" alt="Cobre">
       <p>Limpieza de piezas de cobre</p>
       <a href="productos.html?categoria=Especializados&pagina=2" class="btn-area">Ver Productos</a>
     </div>
