--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 
     <!-- Limpieza Automotriz (categoría 3) -->
     <div class="area-card">
-      <img src="/img/limpiezaautomotriz.png" alt="Automotriz">
+      <img src="/img/LimpiezaAutomotriz.png" alt="Automotriz">
       <p>Automotriz</p>
       <a href="productos.html?categoria=Limpieza%20Automotriz" class="btn-area">Ver Productos</a>
     </div>
