--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,6 @@
       Agradecemos su preferencia.
     </p>
 
-    <!-- 🔹 Imágenes de categorías -->
-    <div class="categorias-grid" id="categorias-imagenes"></div>
-
-  </section>
 
   <!-- 🔍 BUSCADOR -->
   <section class="buscador">
@@ -89,7 +85,7 @@
 
     <!-- Limpieza Automotriz (categoría 3) -->
     <div class="area-card">
-      <img src="/img/Limpieza Automotriz.png" alt="Automotriz">
+      <img src="/img/limpiezaautomotriz.png" alt="Automotriz">
       <p>Automotriz</p>
       <a href="productos.html?categoria=Limpieza%20Automotriz" class="btn-area">Ver Productos</a>
     </div>
@@ -117,7 +113,7 @@
 
     <!-- Baños (Hogar) - ejemplo llevando a página 4 -->
     <div class="area-card">
-      <img src="/img/baño.png" alt="Baños">
+      <img src="/img/bano.png" alt="Baños">
       <p>Baños</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar&pagina=4" class="btn-area">Ver Productos</a>
     </div>
