--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       <b>Aviso:</b> nuestro horario será de <b>7:00 a.m. a 5:00 p.m.</b> hasta nuevo aviso.
       Agradecemos su preferencia.
     </p>
-
+  </section>
 
   <!-- 🔍 BUSCADOR -->
   <section class="buscador">
