--- a/public/index.html
+++ b/public/index.html
@@ -85,42 +85,42 @@
 
     <!-- Limpieza Automotriz (categoría 3) -->
     <div class="area-card">
-      <img src="/img/limpiezaautomotriz.png" alt="Automotriz">
+      <img src="/img/limpiezaautomotriz.PNG" alt="Automotriz">
       <p>Automotriz</p>
       <a href="productos.html?categoria=Limpieza%20Automotriz" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Limpieza del Hogar (categoría 1) -->
     <div class="area-card">
-      <img src="/img/hogar.png" alt="Hogar">
+      <img src="/img/hogar.PNG" alt="Hogar">
       <p>Hogar</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Hotelería (usa categoría Hogar) -->
     <div class="area-card">
-      <img src="/img/hotel.png" alt="Hotelería">
+      <img src="/img/hotel.PNG" alt="Hotelería">
       <p>Hotelería</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Oficina (usa categoría Hogar) -->
     <div class="area-card">
-      <img src="/img/oficina.png" alt="Oficina">
+      <img src="/img/oficina.PNG" alt="Oficina">
       <p>Oficina</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Baños (Hogar) - ejemplo llevando a página 4 -->
     <div class="area-card">
-      <img src="/img/bano.png" alt="Baños">
+      <img src="/img/bano.PNG" alt="Baños">
       <p>Baños</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar&pagina=4" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Cocina (Hogar) -->
     <div class="area-card">
-      <img src="/img/cocina.png" alt="Cocina">
+      <img src="/img/cocina.PNG" alt="Cocina">
       <p>Cocina</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
@@ -141,20 +141,20 @@
 
     <!-- Higiene (categoría 2) -->
     <div class="area-card">
-      <img src="/img/higienee.png" alt="Higiene">
+      <img src="/img/higienee.PNG" alt="Higiene">
       <p>Higiene</p>
       <a href="productos.html?categoria=Higiene" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Especializados (categoría 4) -->
     <div class="area-card">
-      <img src="/img/metalica.png" alt="Piezas metálicas">
+      <img src="/img/metalica.PNG" alt="Piezas metálicas">
       <p>Limpieza de piezas metálicas</p>
       <a href="productos.html?categoria=Especializados&pagina=1" class="btn-area">Ver Productos</a>
     </div>
 
     <div class="area-card">
-      <img src="/img/cobre.png" alt="Cobre">
+      <img src="/img/cobre.PNG" alt="Cobre">
       <p>Limpieza de piezas de cobre</p>
       <a href="productos.html?categoria=Especializados&pagina=2" class="btn-area">Ver Productos</a>
     </div>
