--- a/public/index.html
+++ b/public/index.html
@@ -127,14 +127,14 @@
 
     <!-- Madera (Hogar) -->
     <div class="area-card">
-      <img src="/img/madera.png" alt="Madera">
+      <img src="/img/madera.PNG" alt="Madera">
       <p>Madera</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar" class="btn-area">Ver Productos</a>
     </div>
 
     <!-- Ropa (Hogar) - ejemplo llevando a página 5 -->
     <div class="area-card">
-      <img src="/img/ropa.png" alt="Ropa">
+      <img src="/img/ropa.PNG" alt="Ropa">
       <p>Ropa</p>
       <a href="productos.html?categoria=Limpieza%20del%20Hogar&pagina=5" class="btn-area">Ver Productos</a>
     </div>
