--- a/public/carrito.html
+++ b/public/carrito.html
@@ -32,7 +32,7 @@
 
   <!-- 🔹 CARRITO VACÍO -->
   <div id="carrito-vacio" class="carrito-vacio" style="display:none;">
-      <img src="img/carrito.png" class="img-carrito-vacio" alt="Carrito vacío">
+      <img src="/img/carrito.PNG" class="img-carrito-vacio" alt="Carrito vacío">
       <p>Tu carrito está vacío. Te invitamos a conocer nuestros productos.</p>
       <a href="productos.html" class="btn-negro">Ver productos</a>
   </div>
