--- a/public/contacto.html
+++ b/public/contacto.html
@@ -30,7 +30,7 @@
 
 <!-- 🔹 Banner -->
   <div class="banner banner-contacto">
-    <img src="img/contacto.png" alt="Banner INNOVA">
+    <img src="/img/contacto.PNG" alt="Banner INNOVA">
   </div>
 
 <main class="contacto-container">
